deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-prod
  name: spring-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-prod
  template:
    metadata:
      labels:
        app: spring-prod
    spec:
      containers:
        - image: quay.io/sachinayyar/tekton-argocd:prod
          imagePullPolicy: Always
          name: spring-prod
          ports:
            - containerPort: 8081
              protocol: TCP
