route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-prod
  name: spring-prod
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: spring-prod
    weight: 100
